<resources>
    <string name="app_name">ParticleSim</string>
    <string name="load_game">load game</string>
    <string name="new_game">new game</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings_screen">SettingsScreen</string>
    <string name="blackmodecb">BlackmodeCB</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="mainmenu">MainMenu</string>
    <string name="resume">Resume</string>
    <string name="main_menu">main menu</string>
    <string name="settings">Settings</string>
    <string name="made_by_jorrit_and_maarten">Made By Jorrit and Maarten</string>
    <string name="particle_sim">Particle Sim</string>
    <string name="blackmode">BlackMode</string>
</resources>