<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settingscreen2"
    tools:context="StartScreen.SettingsScreen">

    <Button
        android:id="@+id/DownloadB"
        android:layout_width="145dp"
        android:layout_height="62dp"
        android:background="@drawable/bluebutton"
        android:onClick="onDownloadB_Pressed"
        android:text="@string/download"
        app:layout_constraintBottom_toTopOf="@+id/MainMenuB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UploadB" />

    <Button
        android:id="@+id/MainMenuB"
        android:layout_width="149dp"
        android:layout_height="67dp"
        android:background="@drawable/bluebutton"
        android:onClick="onMainMenuB_Pressed"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toTopOf="@+id/ResumeB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DownloadB" />

    <Button
        android:id="@+id/UploadB"
        android:layout_width="146dp"
        android:layout_height="66dp"
        android:background="@drawable/bluebutton"
        android:onClick="onUploadB_Pressed"
        android:text="@string/upload"
        app:layout_constraintBottom_toTopOf="@+id/DownloadB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBoxBW" />

    <Button
        android:id="@+id/ResumeB"
        android:layout_width="146dp"
        android:layout_height="63dp"
        android:layout_marginBottom="134dp"
        android:background="@drawable/bluebutton"
        android:onClick="onResumeB_Pressed"
        android:text="@string/resume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/CheckBoxBW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:minHeight="48dp"
        android:text="@string/blackmode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BlackMode" />

</androidx.constraintlayout.widget.ConstraintLayout>